@@ -1,5 +1,10 @@
 This is the CHANGELOG for amavisd-milter.
 
+20070729:
+	Better compatibility with Postfix: it does give information about
+	the queue-number only after the RCPT-TO-phase.
+	Thanks to: David Schweikert <david@schweikert.ch>
+
 20061219:
 	amavisd-milter-1.2.1
 
@@ -233,4 +238,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.43 2006/12/17 23:28:06 reho Exp $
+$Id: CHANGES,v 1.44 2006/12/19 20:25:00 reho Exp $
